--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\WINDOWS 7\AppData\Local\Temp\testng-eclipse-1447764953\testng-customsuite.xml</span>
+                    <span>C:\Users\WINDOWS 7\AppData\Local\Temp\testng-eclipse-653080740\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="API.tugas5.APITestNo5" class="method navigator-link" hash-for-method="tesDaftar">tesDaftar</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="selenium.test.BodyEmailExtract" class="method navigator-link" hash-for-method="testdalamiframe">testdalamiframe</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">API.tugas5.APITestNo5</span>
+              <span class="class-name">selenium.test.BodyEmailExtract</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="tesDaftar">
-                  </a> <!-- tesDaftar -->
-                  <span class="method-name">tesDaftar</span>
+                  <a name="testdalamiframe">
+                  </a> <!-- testdalamiframe -->
+                  <span class="method-name">testdalamiframe</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\WINDOWS 7\AppData\Local\Temp\testng-eclipse-1447764953\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\WINDOWS 7\AppData\Local\Temp\testng-eclipse-653080740\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,11 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;API.tugas5.APITestNo5&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;tesDaftar&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- API.tugas5.APITestNo5 --&gt;
+      &lt;class name=&quot;selenium.test.BodyEmailExtract&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'tesDaftar')
-data.setCell(0, 2, 'API.tugas5.APITestNo5')
-data.setCell(0, 3, 9577);
+data.setCell(0, 1, 'testdalamiframe')
+data.setCell(0, 2, 'selenium.test.BodyEmailExtract')
+data.setCell(0, 3, 3077);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -223,11 +219,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">API.tugas5.APITestNo5</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">tesDaftar</span>
+              <div class="chronological-class-name">selenium.test.BodyEmailExtract</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">createChromeDriver</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testdalamiframe</span>
+                <span class="method-start">17264 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">quitChromeDriver</span>
+                <span class="method-start">20344 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
