--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74b68c">  <td>21/11/17 07:02:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="APITestNo5.tesDaftar()[pri:0, instance:API.tugas5.APITestNo5@7daa0fbd]">tesDaftar</td> 
-  <td>main@319689067</td>   <td></td> </tr>
+<tr bgcolor="74b68c">  <td>21/11/25 08:47:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BodyEmailExtract.createChromeDriver()[pri:0, instance:selenium.test.BodyEmailExtract@36060e]">&gt;&gt;createChromeDriver</td> 
+<td>&nbsp;</td>  <td>main@2067925017</td>   <td></td> </tr>
+<tr bgcolor="74b68c">  <td>21/11/25 08:48:18</td>   <td>20342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BodyEmailExtract.quitChromeDriver()[pri:0, instance:selenium.test.BodyEmailExtract@36060e]">&lt;&lt;quitChromeDriver</td> 
+<td>&nbsp;</td>  <td>main@2067925017</td>   <td></td> </tr>
+<tr bgcolor="74b68c">  <td>21/11/25 08:48:15</td>   <td>17261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BodyEmailExtract.testdalamiframe()[pri:0, instance:selenium.test.BodyEmailExtract@36060e]">testdalamiframe</td> 
+  <td>main@2067925017</td>   <td></td> </tr>
 </table>
